fix footer overlap issue

--- a/client/styles/partials/structure.scss
+++ b/client/styles/partials/structure.scss
@@ -43,6 +43,7 @@ main {
     // all direct descendents of main
     // must interpolate sass variables to use them in calc
     margin: calc(#{$navbar-height} + 20px) 20px 20px 20px;
+    padding-bottom: $footer-height;
   }
 }
 
