--- a/public/index.css
+++ b/public/index.css
@@ -171,6 +171,7 @@ main {
 }
 main > * {
   margin: calc(130px + 20px) 20px 20px 20px;
+  padding-bottom: 60px;
 }
 
 .welcome-page {
